--- a/info.css
+++ b/info.css
@@ -17,50 +17,358 @@ body {
 
 
 
+.cart {
+    position: fixed;
+    display: flex;
+    top: 3%;
+    right: 1.2%;
+}
+
+.cart::after {
+    position: fixed;
+    bottom: 6%;
+    right: 9%;
+    content: '';
+}
+
+.cart i {
+    display: block;
+    padding: 1.2rem;
+    font-size: 5.5rem;
+    color: #ffdf4f;
+    border-radius: 3rem;
+
+}
+
+.cart i:hover {
+    transform: translateY(-0.6rem);
+}
+
+.wrapper {
+    width: 100%;
+    max-width: 31.25rem;
+    margin: 6rem auto;
+    margin-right: 70rem;
+
+}
+
+.label {
+    color: #39b54a;
+    font-size: 1.1rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: +0.13rem;
+    margin-bottom: 0.5rem;
+}
+
+.searchBar {
+    width: 120%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: white;
+    margin-bottom: 1.5rem;
+}
+
+.searchBar:hover {}
+
+::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #39b54a;
+    opacity: 1;
+    /* Firefox */
+    font-size: 1.35rem;
+}
+
+:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: white;
+}
+
+::-ms-input-placeholder {
+    /* Microsoft Edge */
+    color: white;
+}
+
+
+#searchQueryInput {
+    width: 100%;
+    height: 4.8rem;
+    background: #707070;
+    outline: none;
+    border: none;
+    border-radius: 1.625rem;
+    padding: 0 3.5rem 0 1.5rem;
+    font-size: 1.4rem;
+    color: white;
+}
+
+
+#searchQuerySubmit {
+    width: 3.5rem;
+    height: 2.8rem;
+    margin-left: -3.5rem;
+    background: none;
+    border: none;
+    outline: none;
+}
+
+#searchQuerySubmit:hover {
+    cursor: pointer;
+}
+
+
+
+
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    overflow-x: hidden;
+}
+
 header {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 9rem;
+    height: 9.8rem;
     background: transparent;
     background: #555555;
     position: relative;
 
 }
 
-
-.logo {
-    width: 350%;
-    height: 210%;
-    display: flex;
-}
-
-
 .navlist {
+    width: 100%;
     display: flex;
-    right: 7%;
-    position: absolute;
-    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+    height: 8rem;
+    background: transparent;
     background: #555555;
-
+    position: relative;
+    padding: 4rem;
 }
 
 .navlist a {
     color: white;
-    margin-left: 60px;
-    font-size: 15px;
+    margin-left: 6rem;
+    font-size: 1.9rem;
     font-weight: 600;
-    border-bottom: 2px solid transparent;
+    border-bottom: 0.2rem solid transparent;
     transition: all .55s ease;
 
 }
 
 .navlist a:hover {
-    border-bottom: 2px solid #39b54a;
+    border-bottom: 0.2rem solid #39b54a;
     color: #ffdf4f;
 }
 
+.logo {
+    width: 350%;
+    height: 280%;
+    display: flex;
+    top: 0%;
+    right: 50%;
+    margin-top: 4.3rem;
+}
+
+
+nav {}
+
+/* Navbar Default State Bg Color */
+.nav-menu .norm a:before {
+    background-color: #ffdf4f;
+}
+
+/* Navbar Hover State Bg Color */
+.nav-menu .norm a:after {
+    background-color: #ecc725;
+}
+
+/* Dropdown Menu a (navbar) Bg Color */
+.nav-menu .dropdown a:before {
+    background-color: #ffdf4f !important;
+}
+
+/* Dropdown Menu a (navbar) Bg Color */
+.nav-menu .dropdown a:after {
+    background-color: white !important;
+    border-bottom: 0.2rem solid #B7521B;
+}
+
+/* Dropdown Menu Open a (navbar) Bg Color */
+.down-color {
+    background-color: white !important;
+    border-bottom: 0.2rem solid #ecc725;
+}
+
+/* Dropdown Menu Inner Items Default Bg Color */
+.dropdown-menu>li>a {
+    background-color: #ecc725 !important;
+}
+
+/* Dropdown Menu Inner Items Hover/Focus Bg Color */
+.dropdown-menu>li>a:hover,
+.dropdown-menu>li>a:focus {
+    background-color: #ffdf4f !important;
+}
+
+/* - - - - End Color Theme - - - - */
+
+
+
+
+/* + + + + Navbar Body + + + + */
+
+nav {
+    position: absolute;
+    height: 8.2rem;
+    width: 100vw;
+}
+
+.nav-menu {
+    display: flex;
+    padding: 0;
+}
+
+
+/* - - - - End Navbar Body - - - - */
+
+
+/* + + + + Nav Buttons + + + + */
+
+.nav-menu li {
+    display: block;
+    flex-grow: 1;
+    text-align: center;
+    z-index: 100;
+    background-color: transparent;
+    line-height: 6.1rem;
+    overflow: hidden;
+}
+
+
+
+.nav-menu li a {
+    position: relative;
+    display: inline-block;
+    z-index: 50;
+    width: 100%;
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+}
+
+
+/* + + Style for Top-Level li's Only + + */
+
+.nav-menu .li-1 {
+    width: 100%;
+}
+
+
+/*  + + + + Nav Button Pseudos (For Hover State) + + + + */
+
+.nav-menu .norm a:after,
+.nav-menu .norm a:before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    height: 6rem;
+}
+
+.nav-menu .norm a:after {
+    left: 50%;
+    width: 0%;
+    z-index: -20;
+    -webkit-transition: .6s ease all .2s;
+    transition: .6s ease all .2s;
+}
+
+.nav-menu .norm a:hover:after {
+    left: 0%;
+    width: 100%;
+    -webkit-transition: .2s ease-out all;
+    transition: .2s ease-out all;
+}
+
+.nav-menu .norm a:before {
+    left: 0%;
+    width: 100%;
+    z-index: -50;
+}
+
+/* - - - - End Nav Button Pseudos - - - - */
+
+
+
+/*  + + + + Dropdown Styles + + + + */
+
+.dropdown {}
+
+.dropdown-menu {
+    width: 100%;
+    position: relative;
+    top: -50rem;
+    text-align: center;
+    z-index: 1049;
+    display: block;
+    list-style: none;
+    font-size: 1.2rem;
+    border: none;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    padding: 0;
+}
+
+.dropdown-menu>li>a {
+    display: block;
+    padding-top: 0.56rem;
+    padding-bottom: 0.56rem;
+    clear: both;
+    font-family: gotham light !important;
+    font-size: 1.5rem !important;
+    line-height: 3.5rem;
+    color: #777 !important;
+    white-space: nowrap;
+}
+
+.dropdown-menu>li>a:hover,
+.dropdown-menu>li>a:focus {
+    text-decoration: none;
+    color: black !important;
+}
+
+.dropdown-menu>li>a:after,
+.dropdown-menu>li>a:before {
+    display: none !important;
+}
+
+
+/* + + jQuery Modified Dropdown Styles + + */
+
+#click-slide {
+    z-index: 3;
+    padding-bottom: 0 !important;
+}
+
+#drop {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 1.85rem;
+}
+
+.down {
+    position: absolute;
+    display: block;
+    top: 0rem;
+}
 
 #menu-icon {
     color: black;
